feat: add initial section

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Art quiz</title>
   </head>
-  <body></body>
+  <body>
+    <section class="initial">
+      <div class="container initial-container">
+        <div class="logo"></div>
+        <div class="category-selection">
+          <div class="category-selection-artists">
+            <img src="./assets/jpg/artists-quiz.jpg" alt="artists-quiz" />
+            <p class="category-selection-title">Викторина по художникам</p>
+          </div>
+          <div class="category-selection-pictures">
+            <img src="./assets/jpg/pictures-quiz.jpg" alt="pictures-quiz" />
+            <p class="category-selection-title">Викторни по картинам</p>
+          </div>
+        </div>
+        <button class="settings-btn">Настройки</button>
+      </div>
+    </section>
+  </body>
 </html>
