feat: load images for category section

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
         <button class="settings-btn btn">Настройки</button>
       </div>
     </section>
+    <!-- initial -->
+
     <section class="settings">
       <div class="container settings-container">
         <div class="settings-top">
@@ -63,6 +65,11 @@
         </div>
         <button class="settings-btn-back btn">Назад</button>
       </div>
+    </section>
+    <!-- settings -->
+
+    <section class="categories">
+      <div class="container categories-container"></div>
     </section>
   </body>
 </html>
