feat: add categories section

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,237 @@
     <!-- settings -->
 
     <section class="categories">
-      <div class="container categories-container"></div>
+      <div class="container categories-container">
+        <div class="logo-wrapper">
+          <div class="logo"></div>
+          <h3 class="main-title">Категории</h3>
+        </div>
+        <div class="btn-wrapper">
+          <button class="categories-btn btn">Меню</button>
+          <button class="categories-btn btn">Результаты</button>
+        </div>
+        <ul class="card-list">
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Январь</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Февраль</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Март</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Апрель</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Май</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Июнь</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Июль</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Август</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Сентябрь</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Октябрь</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Ноябрь</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+          <li class="card-container">
+            <div class="card-item">
+              <div class="card-title">
+                <h3 class="card-title-info">Декабрь</h3>
+                <span class="card-title-right-answers">6</span>
+              </div>
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="card-img"
+                class="card-img"
+              />
+              <div class="card-info">
+                <p class="picture-name">Сватовство майора</p>
+                <p class="picture-author">Павел Федотов</p>
+                <p class="picture-year">1852</p>
+              </div>
+            </div>
+          </li>
+        </ul>
+        <!-- cards-list -->
+      </div>
+      <!-- container -->
     </section>
+    <!-- categories -->
   </body>
 </html>
