--- a/src/index.html
+++ b/src/index.html
@@ -301,5 +301,51 @@
       <!-- container -->
     </section>
     <!-- categories -->
+
+    <section class="questions questions-artists">
+      <div class="container questions-artists-container">
+        <div class="questions-header">
+          <div class="logo"></div>
+          <div class="timer">30</div>
+          <button class="questions-btn btn">Выйти</button>
+        </div>
+        <div class="questions-artists-main">
+          <img
+            src="./assets/jpg/color-pic-category-artists/1.jpg"
+            alt="picture"
+            class="questions-artists-img"
+          />
+          <ul class="dots">
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+            <li class="dot"></li>
+          </ul>
+        </div>
+        <div class="answers-artists">
+          <ul class="answers-artists-list">
+            <li class="answers-artists-item">
+              <p class="artist-name">Жермен Висконсин</p>
+            </li>
+            <li class="answers-artists-item">
+              <p class="artist-name">Жермен Висконсин</p>
+            </li>
+            <li class="answers-artists-item">
+              <p class="artist-name">Жермен Висконсин</p>
+            </li>
+            <li class="answers-artists-item">
+              <p class="artist-name">Жермен Висконсин</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- container -->
+    </section>
   </body>
 </html>
