feat: add questions-pictures section

--- a/src/index.html
+++ b/src/index.html
@@ -347,5 +347,51 @@
       </div>
       <!-- container -->
     </section>
+
+    <section class="questions questions-pictures">
+      <div class="container questions-pictures-container">
+        <div class="questions-header">
+          <div class="logo"></div>
+          <div class="timer">30</div>
+          <button class="questions-btn btn">Выйти</button>
+        </div>
+        <div class="questions-pictures-question">
+          Какую из этих картин написал Энрики Иглесиас?
+        </div>
+        <div class="questions-pictures-main">
+          <ul class="answers-pictures-list">
+            <li class="answers-pictures-item">
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="picture"
+                class="answers-pictures-img"
+              />
+            </li>
+            <li class="answers-pictures-item">
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="picture"
+                class="answers-pictures-img"
+              />
+            </li>
+            <li class="answers-pictures-item">
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="picture"
+                class="answers-pictures-img"
+              />
+            </li>
+            <li class="answers-pictures-item">
+              <img
+                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                alt="picture"
+                class="answers-pictures-img"
+              />
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- container -->
+    </section>
   </body>
 </html>
