feat: change dots position. Delete unnecessary margins

--- a/src/index.html
+++ b/src/index.html
@@ -310,11 +310,9 @@
           <button class="questions-btn btn">Выйти</button>
         </div>
         <div class="questions-artists-main">
-          <img
-            src="./assets/jpg/color-pic-category-artists/1.jpg"
-            alt="picture"
-            class="questions-artists-img"
-          />
+          <div class="questions-artists-question">
+            Какую из этих картин написал Энрики Иглесиас?
+          </div>
           <ul class="dots">
             <li class="dot"></li>
             <li class="dot"></li>
@@ -327,6 +325,11 @@
             <li class="dot"></li>
             <li class="dot"></li>
           </ul>
+          <img
+            src="./assets/jpg/color-pic-category-artists/1.jpg"
+            alt="picture"
+            class="questions-artists-img"
+          />
         </div>
         <div class="answers-artists">
           <ul class="answers-artists-list">
@@ -358,6 +361,18 @@
         <div class="questions-pictures-question">
           Какую из этих картин написал Энрики Иглесиас?
         </div>
+        <ul class="dots">
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+        </ul>
         <div class="questions-pictures-main">
           <ul class="answers-pictures-list">
             <li class="answers-pictures-item">
