feat: add score button

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="btn-wrapper">
           <button class="categories-btn btn">Меню</button>
-          <button class="categories-btn btn">Результаты</button>
+          <button class="categories-btn btn">Настройки</button>
         </div>
         <ul class="card-list">
           <li class="card-container">
@@ -95,6 +95,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -113,6 +114,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -131,6 +133,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -149,6 +152,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -167,6 +171,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -185,6 +190,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -203,6 +209,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -221,6 +228,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -239,6 +247,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -257,6 +266,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -275,6 +285,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
           <li class="card-container">
@@ -293,6 +304,7 @@
                 <p class="picture-author">Павел Федотов</p>
                 <p class="picture-year">1852</p>
               </div>
+              <button class="card-score btn">Счёт</button>
             </div>
           </li>
         </ul>
