feat: add class Menu (initial section)

--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,16 @@
           </div>
           <div class="category-selection-pictures">
             <img src="./assets/jpg/pictures-quiz.jpg" alt="pictures-quiz" />
-            <p class="category-selection-title">Викторни по картинам</p>
+            <p class="category-selection-title">Викторина по картинам</p>
           </div>
         </div>
         <button class="settings-btn btn">Настройки</button>
+        <a
+          href="https://github.com/BlackBerryID"
+          class="github-link"
+          target="_blank"
+          >BlackBerryID</a
+        >
       </div>
     </section>
     <!-- initial -->
