feat: add Category.show method

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
       <div class="container initial-container">
         <div class="logo"></div>
         <div class="category-selection">
-          <div class="category-selection-artists">
+          <div class="category-selection-artists artists">
             <img src="./assets/jpg/artists-quiz.jpg" alt="artists-quiz" />
             <p class="category-selection-title">Викторина по художникам</p>
           </div>
-          <div class="category-selection-pictures">
+          <div class="category-selection-pictures pictures">
             <img src="./assets/jpg/pictures-quiz.jpg" alt="pictures-quiz" />
             <p class="category-selection-title">Викторина по картинам</p>
           </div>
@@ -104,15 +104,15 @@
           <h3 class="main-title">Категории</h3>
         </div>
         <div class="btn-wrapper">
-          <button class="categories-btn btn">Меню</button>
-          <button class="categories-btn btn">Настройки</button>
+          <button class="categories-btn btn menuBtn">Меню</button>
+          <button class="categories-btn btn settingsBtn">Настройки</button>
         </div>
         <ul class="card-list">
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Январь</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -130,8 +130,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Февраль</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -149,8 +149,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Март</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -168,8 +168,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Апрель</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -187,8 +187,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Май</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -206,8 +206,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Июнь</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -225,8 +225,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Июль</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -244,8 +244,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Август</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -263,8 +263,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Сентябрь</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -282,8 +282,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Октябрь</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -301,8 +301,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Ноябрь</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
@@ -320,8 +320,8 @@
           <li class="card-container">
             <div class="card-item">
               <div class="card-title">
-                <h3 class="card-title-info">Декабрь</h3>
-                <span class="card-title-right-answers">6</span>
+                <h3 class="card-title-info"></h3>
+                <span class="card-title-right-answers"></span>
               </div>
               <img
                 src="./assets/jpg/color-pic-category-artists/1.jpg"
