feat: add popup

--- a/src/index.html
+++ b/src/index.html
@@ -449,5 +449,18 @@
       </div>
       <!-- container -->
     </section>
+    <div class="popup">
+      <div class="popup-wrapper">
+        <div class="popup-content">
+          <div class="popup-score">5</div>
+          <img src="./assets/png/result.png" alt="picture" />
+          <div class="popup-info">
+            <p class="popup-picture-name">Весенний луг</p>
+            <p class="popup-artist-name">Жульен Бодуа</p>
+          </div>
+          <button class="btn">Продолжить</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
