feat: add handleRound method (class Game)

--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -134,7 +134,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -153,7 +153,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -172,7 +172,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -191,7 +191,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -210,7 +210,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -229,7 +229,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -248,7 +248,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -267,7 +267,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -286,7 +286,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -305,7 +305,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -324,7 +324,7 @@
                 <span class="card-title-right-answers"></span>
               </div>
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="card-img"
                 class="card-img"
               />
@@ -366,11 +366,11 @@
             <li class="dot"></li>
             <li class="dot"></li>
           </ul>
-          <img
-            src="./assets/jpg/color-pic-category-artists/1.jpg"
+          <!-- <img
+            src="./assets/jpg/artists/1.jpg"
             alt="picture"
             class="questions-artists-img"
-          />
+          /> -->
         </div>
         <div class="answers-artists">
           <ul class="answers-artists-list">
@@ -418,28 +418,28 @@
           <ul class="answers-pictures-list">
             <li class="answers-pictures-item">
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="picture"
                 class="answers-pictures-img"
               />
             </li>
             <li class="answers-pictures-item">
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="picture"
                 class="answers-pictures-img"
               />
             </li>
             <li class="answers-pictures-item">
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="picture"
                 class="answers-pictures-img"
               />
             </li>
             <li class="answers-pictures-item">
               <img
-                src="./assets/jpg/color-pic-category-artists/1.jpg"
+                src="./assets/jpg/artists/1.jpg"
                 alt="picture"
                 class="answers-pictures-img"
               />
