--- a/src/index.html
+++ b/src/index.html
@@ -453,12 +453,12 @@
       <div class="popup-wrapper">
         <div class="popup-content">
           <div class="popup-score">5</div>
-          <img src="./assets/png/result.png" alt="picture" />
+          <img class="popup-img" src="./assets/png/result.png" alt="picture" />
           <div class="popup-info">
             <p class="popup-picture-name">Весенний луг</p>
             <p class="popup-artist-name">Жульен Бодуа</p>
           </div>
-          <button class="btn">Продолжить</button>
+          <button class="popup-btn btn">Продолжить</button>
         </div>
       </div>
     </div>
