feat: add loop behavior for guessing pictures round

--- a/src/index.html
+++ b/src/index.html
@@ -366,11 +366,6 @@
             <li class="dot"></li>
             <li class="dot"></li>
           </ul>
-          <!-- <img
-            src="./assets/jpg/artists/1.jpg"
-            alt="picture"
-            class="questions-artists-img"
-          /> -->
         </div>
         <div class="answers-artists">
           <ul class="answers-artists-list">
@@ -403,16 +398,16 @@
           Какую из этих картин написал Энрики Иглесиас?
         </div>
         <ul class="dots">
-          <li class="dot"></li>
-          <li class="dot"></li>
-          <li class="dot"></li>
-          <li class="dot"></li>
-          <li class="dot"></li>
-          <li class="dot"></li>
-          <li class="dot"></li>
-          <li class="dot"></li>
-          <li class="dot"></li>
-          <li class="dot"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
+          <li class="dot dot-pictures"></li>
         </ul>
         <div class="questions-pictures-main">
           <ul class="answers-pictures-list">
