refactor: replace inline js styles with css classes

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     </section>
     <!-- initial -->
 
-    <section class="settings">
+    <section class="settings remove hide">
       <div class="container settings-container">
         <div class="settings-top">
           <div class="logo"></div>
@@ -97,7 +97,7 @@
     </section>
     <!-- settings -->
 
-    <section class="categories">
+    <section class="categories remove hide">
       <div class="container categories-container">
         <div class="logo-wrapper">
           <div class="logo"></div>
@@ -343,7 +343,7 @@
     </section>
     <!-- categories -->
 
-    <section class="questions questions-artists">
+    <section class="questions questions-artists remove hide">
       <div class="container questions-artists-container">
         <div class="questions-header">
           <div class="logo"></div>
@@ -387,7 +387,7 @@
       <!-- container -->
     </section>
 
-    <section class="questions questions-pictures">
+    <section class="questions questions-pictures remove hide">
       <div class="container questions-pictures-container">
         <div class="questions-header">
           <div class="logo"></div>
@@ -444,7 +444,7 @@
       </div>
       <!-- container -->
     </section>
-    <div class="popup">
+    <div class="popup hidden hide">
       <div class="popup-wrapper">
         <div class="popup-content">
           <div class="popup-score">5</div>
