--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,7 @@
           </div>
         </div>
         <button class="settings-btn btn">Настройки</button>
-        <a
-          href="https://github.com/BlackBerryID"
-          class="github-link"
-          target="_blank"
-          >BlackBerryID</a
-        >
+        <a href="https://github.com/BlackBerryID" class="github-link" target="_blank">BlackBerryID</a>
       </div>
     </section>
     <!-- initial -->
@@ -41,51 +36,21 @@
           <h3 class="volume-title title">Звук</h3>
           <div class="volume-wrapper">
             <button class="volume-icon"></button>
-            <input
-              type="range"
-              class="volume-bar"
-              min="0"
-              max="1"
-              value="0.5"
-              step="0.01"
-            />
+            <input type="range" class="volume-bar" min="0" max="1" value="0.5" step="0.01" />
           </div>
         </div>
         <div class="time-game">
           <h3 class="time-game-title title">Игра на время</h3>
           <div class="time-amount">
-            <button
-              class="time-amount-btn btn"
-              onclick="this.nextElementSibling.stepDown()"
-            >
-              −
-            </button>
-            <input
-              class="time-amount-input"
-              type="number"
-              min="5"
-              max="30"
-              value="20"
-              step="5"
-              readonly
-            />
-            <button
-              class="time-amount-btn btn"
-              onclick="this.previousElementSibling.stepUp()"
-            >
-              +
-            </button>
+            <button class="time-amount-btn btn" onclick="this.nextElementSibling.stepDown()">−</button>
+            <input class="time-amount-input" type="number" min="5" max="30" value="20" step="5" readonly />
+            <button class="time-amount-btn btn" onclick="this.previousElementSibling.stepUp()">+</button>
           </div>
           <div class="time-game-wrapper">
             <p class="time-game-off">Выкл</p>
             <div class="switch-wrapper">
               <label class="switch">
-                <input
-                  class="checkbox"
-                  data-name="time"
-                  type="checkbox"
-                  id="checkBox"
-                />
+                <input class="checkbox" data-name="time" type="checkbox" id="checkBox" />
                 <span class="slider"></span>
               </label>
             </div>
@@ -114,11 +79,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -133,11 +94,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -152,11 +109,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -171,11 +124,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -190,11 +139,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -209,11 +154,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -228,11 +169,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -247,11 +184,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -266,11 +199,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -285,11 +214,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -304,11 +229,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -323,11 +244,7 @@
                 <h3 class="card-title-info"></h3>
                 <span class="card-title-right-answers"></span>
               </div>
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="card-img"
-                class="card-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="card-img" class="card-img" />
               <div class="card-info">
                 <p class="picture-name">Сватовство майора</p>
                 <p class="picture-author">Павел Федотов</p>
@@ -351,9 +268,7 @@
           <button class="questions-btn btn">Выйти</button>
         </div>
         <div class="questions-artists-main">
-          <div class="questions-artists-question">
-            Какую из этих картин написал Энрики Иглесиас?
-          </div>
+          <div class="questions-artists-question">Какую из этих картин написал Энрики Иглесиас?</div>
           <ul class="dots">
             <li class="dot"></li>
             <li class="dot"></li>
@@ -394,9 +309,7 @@
           <div class="timer">30</div>
           <button class="questions-btn btn">Выйти</button>
         </div>
-        <div class="questions-pictures-question">
-          Какую из этих картин написал Энрики Иглесиас?
-        </div>
+        <div class="questions-pictures-question">Какую из этих картин написал Энрики Иглесиас?</div>
         <ul class="dots">
           <li class="dot dot-pictures"></li>
           <li class="dot dot-pictures"></li>
@@ -412,32 +325,16 @@
         <div class="questions-pictures-main">
           <ul class="answers-pictures-list">
             <li class="answers-pictures-item">
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="picture"
-                class="answers-pictures-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="picture" class="answers-pictures-img" />
             </li>
             <li class="answers-pictures-item">
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="picture"
-                class="answers-pictures-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="picture" class="answers-pictures-img" />
             </li>
             <li class="answers-pictures-item">
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="picture"
-                class="answers-pictures-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="picture" class="answers-pictures-img" />
             </li>
             <li class="answers-pictures-item">
-              <img
-                src="./assets/jpg/artists/1.jpg"
-                alt="picture"
-                class="answers-pictures-img"
-              />
+              <img src="./assets/jpg/artists/1.jpg" alt="picture" class="answers-pictures-img" />
             </li>
           </ul>
         </div>
